# lime-translate

./: .gitignore  AUTHORS  README.md  pyproject.toml
lime_translate.egg-info/: PKG-INFO  SOURCES.txt
src/lime_translate/: __init__.py  main.py
