[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "lime-translate"
version = "0.0.1a1"
authors = [
  { name="Jean-Baptiste Bertrand", email="jean-baptiste.bertrand@univ-amu.fr" },
]
description = "Lime-translate is a Python library designed to improve compatibility between Limesurvey and computer-assisted translation (CAT) software."
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
keywords = ["limesurvey", "translation", "conversion"]
dependencies = ["lxml>=6"]
[project.urls]
Homepage = "https://gitlab.huma-num.fr/jbertrand/lime-translate"
Issues = "https://gitlab.huma-num.fr/jbertrand/lime-translate/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
